# kubeflow-demo

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/controllers/: documentation_controller.py  embedding_controller.py  llm_controller.py  weaviate_controller.py
backend/app/core/: config.py  db.py  websocket_manager.py
backend/app/routes/: documentation_route.py  embedding_route.py  llm_route.py  weaviate_route.py  websocket.py
backend/app/services/: documentation_service.py  embedding_service.py  llm_service.py  weaviate_service.py
backend/parsed_repositories/KacemMathlouthi/Resume-RAG/: code.txt
backend/parsed_repositories/kubeflow/website/: code.txt  content.txt
frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/nginx/: nginx.conf
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: chat-interface.tsx  chat-message.tsx  footer.tsx  implemented-features.tsx  rag-diagram.tsx  upcoming-features.tsx
