[tool.poetry]
name = "Kubeflow-Demo"
version = "0.1.0"
description = ""
authors = ["Kacem Mathlouthi <kacem.mathlouthi@insat.ucar.tn>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.6.1"
pymongo = "^4.10.1"
pydantic = "^2.10.3"
black = "^24.10.0"
isort = "^5.13.2"
beautifulsoup4 = "^4.12.3"
pypdf2 = "^3.0.1"
pandas = "^2.2.3"
python-docx = "^1.1.2"
groq = "^0.13.0"
logging = "^0.4.9.6"
python-multipart = "^0.0.19"
youtube-transcript-api = "^0.6.3"
pylint = "^3.3.2"
tabulate = "^0.9.0"
autoflake = "^2.3.1"
pytest = "^8.3.4"
httpx = "^0.28.1"
sqlalchemy = "^2.0.36"
pyjwt = "^2.10.1"
bcrypt = "^4.2.1"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"
weaviate-client = "^4.10.4"
langchain = "^0.3.17"
tiktoken = "^0.8.0"
langchain-community = "^0.3.16"
websockets = "^14.2"
together = "^1.4.1"
elevenlabs = "^1.51.0"
google-genai = "^1.5.0"
openai = "^1.68.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
